STJS-888 Styling issue - overlap when icon is set with linedup config

--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -76,61 +76,12 @@ input:-webkit-autofill.error-field {
 
 .st-card-number {
   &__wrapper {
-    display: block;
-    position: relative;
-    width: 100%;
-    box-sizing: border-box;
-    margin-right: 10px;
-  }
-
-  &--lined-up {
-    display: flex;
-    justify-content: center;
+    min-width: 225px;
   }
 }
 
-.card-number {
-  &__label.lined-up {
-    max-width: 100px;
-    width: 100%;
-    word-wrap: break-word;
-    text-align: right;
-  }
-}
-
-.expiration-date {
-  &__label.lined-up {
-    max-width: 100px;
-    width: 100%;
-    word-wrap: break-word;
-    text-align: right;
-  }
-}
-
-.security-code {
-  &__label.lined-up {
-    max-width: 100px;
-    width: 100%;
-    word-wrap: break-word;
-    text-align: right;
-  }
-}
-
-.st-expiration-date {
-  &__wrapper {
-    display: block;
-    position: relative;
-    width: 100%;
-    box-sizing: border-box;
-    margin-right: 10px;
-  }
-
-  &--lined-up {
-    display: flex;
-    justify-content: center;
-  }
-}
-
+.st-card-number,
+.st-expiration-date,
 .st-security-code {
   &__wrapper {
     display: block;
@@ -143,5 +94,16 @@ input:-webkit-autofill.error-field {
   &--lined-up {
     display: flex;
     justify-content: center;
+  }
+}
+
+.card-number,
+.expiration-date,
+.security-code {
+  &__label.lined-up {
+    max-width: 110px;
+    width: 100%;
+    word-wrap: break-word;
+    text-align: right;
   }
 }
